// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1:focus {
  background-color: #3b3b3b;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 101;
  border-radius: 2px;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-4 {
  border: 0;
  background-color: inherit;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin-left: -8px;
  cursor: pointer;
}

.emotion-5 {
  padding-left: 8px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  margin-right: -12px;
}

.emotion-7 {
  position: relative;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #6088FE;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-8:hover,
.emotion-8.focus-visible:focus,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-8:hover {
  cursor: pointer;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-11 {
  margin-left: 8px;
}

.emotion-12 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
    data-reach-skip-link=""
    data-reach-skip-nav-link=""
    href="#reach-skip-nav"
  >
    Skip to content
  </a>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <button
        aria-label="Open Sidebar Menu"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="hamburger.svg"
          height={20}
        />
      </button>
      <a
        aria-label="Home"
        className="emotion-5"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          height={26}
        />
      </a>
      <ProjectSwitcher
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      >
        <button
          aria-label="Open user menu"
          className="emotion-8"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              JD
            </div>
            <svg
              className="emotion-11"
              color="#808080"
              data-file-name="chevron.svg"
              height={20}
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <Sidebar
    isSidebarOpen={false}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setSidebarOpen={[Function]}
    user={
      Object {
        "agreedToPoliciesDate": "20210211",
        "dateJoined": "2020-03-02T19:09:16Z",
        "email": "jane.doe@zorroa.com",
        "firstName": "Jane",
        "groups": Array [],
        "id": 1,
        "isActive": true,
        "isStaff": true,
        "isSuperuser": false,
        "lastLogin": "2020-03-20T18:17:02.472778Z",
        "lastName": "Doe",
        "organizations": Array [
          "42869703-fb62-4988-a0d1-e59b15caff06",
        ],
        "projectId": "76917058-b147-4556-987a-0a0f11e46d9b",
        "roles": Object {
          "76917058-b147-4556-987a-0a0f11e46d9b": Array [
            "ML_Tools",
            "User_Admin",
            "API_Keys",
            "Webhooks",
          ],
          "e93cbadb-e5ae-4598-8395-4cf5b30c0e94": Array [],
        },
        "username": "jane.doe",
      }
    }
  />
  <div
    data-reach-skip-nav-content=""
    id="reach-skip-nav"
  />
  <div
    className="emotion-12"
  >
    Hello World
  </div>
</div>
`;

exports[`<Layout /> should render properly 2`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1:focus {
  background-color: #3b3b3b;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 101;
  border-radius: 2px;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-4 {
  border: 0;
  background-color: inherit;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin-left: -8px;
  cursor: pointer;
}

.emotion-5 {
  padding-left: 8px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  margin-right: -12px;
}

.emotion-7 {
  position: relative;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #6088FE;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-8:hover,
.emotion-8.focus-visible:focus,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-8:hover {
  cursor: pointer;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-11 {
  margin-left: 8px;
}

.emotion-12 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
    data-reach-skip-link=""
    data-reach-skip-nav-link=""
    href="#reach-skip-nav"
  >
    Skip to content
  </a>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <button
        aria-label="Open Sidebar Menu"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="hamburger.svg"
          height={20}
        />
      </button>
      <a
        aria-label="Home"
        className="emotion-5"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          height={26}
        />
      </a>
      <ProjectSwitcher
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      >
        <button
          aria-label="Open user menu"
          className="emotion-8"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              JD
            </div>
            <svg
              className="emotion-11"
              color="#808080"
              data-file-name="chevron.svg"
              height={20}
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <Sidebar
    isSidebarOpen={true}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    setSidebarOpen={[Function]}
    user={
      Object {
        "agreedToPoliciesDate": "20210211",
        "dateJoined": "2020-03-02T19:09:16Z",
        "email": "jane.doe@zorroa.com",
        "firstName": "Jane",
        "groups": Array [],
        "id": 1,
        "isActive": true,
        "isStaff": true,
        "isSuperuser": false,
        "lastLogin": "2020-03-20T18:17:02.472778Z",
        "lastName": "Doe",
        "organizations": Array [
          "42869703-fb62-4988-a0d1-e59b15caff06",
        ],
        "projectId": "76917058-b147-4556-987a-0a0f11e46d9b",
        "roles": Object {
          "76917058-b147-4556-987a-0a0f11e46d9b": Array [
            "ML_Tools",
            "User_Admin",
            "API_Keys",
            "Webhooks",
          ],
          "e93cbadb-e5ae-4598-8395-4cf5b30c0e94": Array [],
        },
        "username": "jane.doe",
      }
    }
  />
  <div
    data-reach-skip-nav-content=""
    id="reach-skip-nav"
  />
  <div
    className="emotion-12"
  >
    Hello World
  </div>
</div>
`;
